2013-06-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --compact-libraries and --fast-libraries as
	options to set TARGET_CFLAGS.
	* build-elf32.sh: Use TARGET_CLAGS when configuring.
	* build-uclibc.sh: Likewise.

2013-06-03  Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Correct typo.

2013-05-31  Anton Kolesov <anton.kolesov@synopsys.com>

	* get-random-port.sh: Script that returns random port number that is free.
	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Use
	get-random-port.sh instead of incremented ports and set very big
	max_reload_reboots value.

2013-05-23	Anton Kolesov <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp, dejagnu/baseboards/arc-nsim.exp: Change
	functions where watchdog breakpoints are set from 'abort' and '_exit' to
	'exit' and '_exit_r', use NSIM_HOME environment variable to start nsim_gdb
	instance, use option -reconnect of nsim_gdb, use only a limited range of
	TCP ports for GDB communication.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* README.md: Correct to match new ARC Linux repo.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: Change back to ARC Linux repo.
	* arc-versions.sh: Use ARC Linux repo branch.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* tag-release.sh: Correct editing of arc-versions.sh
	* arc-clone-all.sh: Really add the file.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* tag-release.sh: Correct typo.

2013-05-15  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: New file.
	* arc-versions.sh: Modified to use the upstream stable Linux repo
	and branch.
	* README.md: Modified to refer to the upstream stable Linux repo
	and to refer to arc-clone-all.sh.
	* tag-release.sh: No need to modify arc-versions.sh not to pull,
	explicitly use /bin/sh.

2013-05-14  Jeremy Bennett <jeremy.bennett@embecosm.com>
